# ALSE_VNE

./: Geometrica.h  cuadrado.cpp  cuadrado.h  main.cpp  pentagono.cpp  pentagono.h  triangulo.cpp
primer_punto/: CMakeLists.txt  circulo.h  triangulo.h
segundo_punto/: CMakeLists.txt  Figs.txt  Geometrica.cpp  circulo.cpp  entrada.txt  main.cpp
tercer_punto/: CMakeLists.txt  main.cpp  pol.cpp  pol.h  term.cpp  term.h
